--- a/src/Components/components.css
+++ b/src/Components/components.css
@@ -6,18 +6,71 @@
     right: 20%;
   }
 
-  /* .wrapper {
-    position: relative;
-  } */
-  
-  /* .feedback {
-    position: fixed;
-    left: 250px;
-    top: 10px;
-  } */
-
 .font{
-    color: red;
+    color: white !important;
     font-family: 'Epilogue', sans-serif;
 line-height: 111%;
+}
+
+.wrapper {
+  position: absolute;
+  top: 50%;
+  left:50%;
+  -webkit-transform: translate(-50%,-50%);
+}
+
+.nav-item a {
+  color: #fff;
+  font-size: 2em;
+  text-decoration: none;
+  position: relative;
+  font-family: 'Dosis', sans-serif;
+}
+
+.hover-text:after {
+	content: '';
+  position: absolute;
+  left: 0;
+  display: inline-block;
+  height: 1em;
+  width: 100%;
+  border-bottom: 1px solid;
+  margin-top: 10px;
+  opacity: 0;
+	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+	transition: opacity 0.35s, transform 0.35s;
+	-webkit-transform: scale(0,1);
+	transform: scale(0,1);
+}
+
+.hover-text:hover:after {
+  opacity: 1;
+	-webkit-transform: scale(1);
+	transform: scale(1);
+}
+
+
+.btn {
+  font-weight: 300;
+  -webkit-border-radius: 9;
+  -moz-border-radius: 9;
+  border-radius: 5px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 4px 10px 4px 10px;
+  border: solid #ffffff 1px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  color: #29283e !important;
+  background-color: white;
+}
+
+
+@media (max-width: 991px){
+  .right-img{
+    width: 55vw;
+  }
 }
