--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -41,26 +41,6 @@
 
 }
 
-a:after {
-    content: "";
-    position: absolute;
-    background-color: #ff3c78;
-    height: 3px;
-    width: 0;
-    left: 0;
-    bottom: -10px;
-    transition: 0.3s;
-}
-
-a:hover {
-    color: #ffffff;
-}
-
-a:hover:after {
-    width: 100%;
-}
-
-
 .nav-links:hover {
     border-radius: 4px;
     transition: all 0.2s ease-out;
@@ -79,7 +59,7 @@ a:hover:after {
 }
 
 .down {
-    margin-bottom: 70vw;
+    margin-bottom: 25rem;
 }
 
 @media screen and (max-width: 990px) {
